<resources>
    <string name="app_name">Mänguima Project</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main" translatable="false">MainActivity</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="infoTitle">About...</string>
    <string name="thx">Thank you for using Mänguima!\nVisit us on www.manguimaproject.com\nVersion 1.0</string>
    <string name="notRegistered"><u>Are you not registered? Click here.</u></string>
    <string name="forgetPassword"><u>Did you forget your password? Click here.</u></string>
    <string name="alreadyRegistered"><u>Already registered? Log in.</u></string>
    <string name="amigos">Friends</string>
    <string name="Menu">Menu</string>
    <string name="User">User</string>
    <string name="Name">Name</string>
    <string name="Surname">Surname</string>
    <string name="Nationality">Nationality</string>
    <string name="Games">Games</string>
    <string name="Like">Like ()</string>
    <string name="Comment">Comment ()</string>
    <string name="Join">Join Mänguima!</string>
    <string name="Resetpass">Password Reset</string>
    <string name="Sendmail">Send Password Reset</string>
    <string name="NombreUser">Username</string>
    <string name="AddPhoto">Add a profile picture!</string>
    <string name="AddBirth">Add a date of birth!</string>
    <string name="Register">Register</string>
    <string name="Summoner">Summoner Name</string>
    <string name="SearchSummoner">Search Summoner</string>
    <string name="RecentGames">Recent Games</string>
    <string name="AcercaDe">About</string>
    <string name="Preferencias">Preferences</string>
    <string name="Birth">Birthdate</string>
    <string name="Exit">Exit</string>
    <string name="selecciona_idioma">Select Language:</string>
    <string name="visita_nuestra_web">Visit Our Web:</string>
    <string name="salir_manguima">Leave Mänguima:</string>
    <string name="salir_boton">Leave</string>
    <string name="desarrolador_por">Developed by</string>
    <string name="login">Login</string>
    <string name="SesionIniciada">Session Started</string>
    <string name="FalloLogin">Failed to login.</string>
    <string name="CheckEmail">Enter an email</string>
    <string name="CheckUsuario">Enter a user</string>
    <string name="CheckNombre">Enter a name</string>
    <string name="CheckApellido">Enter a surname</string>
    <string name="CheckEdad">Enter an age</string>
    <string name="CheckContraseña">Enter a password</string>
    <string name="ImagenSubida">Uploaded image</string>
    <string name="FalloImagen">Failed to upload the image</string>
    <string name="SelectImagen">Select Image</string>
    <string name="Subiendo">Uploading</string>
    <string name="AddUsuario">Added User</string>
    <string name="FalloUsuario">The user could not be created.</string>
    <string name="OtroUsuario">You must choose a different username or email</string>
    <string name="SubiendoImagen">Uploading Image...</string>
    <string name="CheckReset">Check email to reset your password!</string>
    <string name="FalloReset">Fail to send reset password email!</string>
    <string name="CheckSalir">Are you sure you want to leave?</string>
    <string name="Si">Yes</string>
    <string name="RecuPartidas">Recovering Games...</string>
    <string name="FalloRecuperar">Unable to retrieve information</string>
    <string name="ObtnCampeones">Obtaining Champions...</string>
    <string name="BuscandoSummoner">Looking for Summoner...</string>
    <string name="FalloInvocador">The Summoner was not found</string>
    <string name="Bronce">Bronze</string>
    <string name="Oro">Gold</string>
    <string name="Plata">Silver</string>
    <string name="Platino">Platinum</string>
    <string name="Diamante">Diamond</string>
    <string name="Nivel">Level</string>
    <string name="Derrota">Defeat</string>
    <string name="Victoria">Victory</string>
    <string name="EliminarAmigos">Removed from friends</string>
    <string name="DeAmigos">Of friends?</string>
    <string name="SeguroEliminar">Are you sure you want to delete</string>
    <string name="EnviarAmistad">"SEND FRIEND REQUEST "</string>
    <string name="RechazarAmistad">"REJECT FRIEND REQUEST "</string>
    <string name="Mensaje">Message</string>
    <string name="NuevoTema">Create new post</string>
    <string name="EditarPerfil">"EDIT PROFILE "</string>
    <string name="FalloComentario">"The comment can not be empty "</string>
    <string name="TemaCreado">Theme created!</string>
    <string name="IntroduceTema">Enter a topic name</string>
    <string name="TemaVacio">The theme can not be empty!</string>
    <string name="TodosUsuarios">"All users "</string>
    <string name="CargandoUsuario">Loading User Information</string>
    <string name="EsperaUsuario">Wait while we load the user\'s information.</string>
    <string name="AceptarAmistad">ACCEPT FRIEND REQUEST</string>
    <string name="CancelarAmistad">CANCEL PETITION FOR FRIENDSHIP</string>
    <string name="EliminarAmigo">ELIMINATE FRIEND</string>
    <string name="ErrorPeticion">Error sending the request</string>
    <string name="VolverCampeon">Return to the Champion</string>
    <string name="HistoriaCampeon">CHAMPION HISTORY</string>
    <string name="CerrarSesion">Sign off</string>
    <string name="Usuarios">Users</string>
    <string name="Foro">Forum</string>
    <string name="Torneos">Tournaments</string>
    <string name="Informacion">Information</string>
    <string name="NoRecuerdaContra">Remember not to give passwords</string>
    <string name="Campeon">Champions</string>
    <string name="AcercaNosotros">About us</string>
</resources>
