<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.dmb.testriotapi.ProfileActivity">

    <ImageView
        android:id="@+id/fotoPerfil"
        android:layout_width="match_parent"
        android:layout_height="277dp"
        android:layout_weight="0"
        android:baselineAlignBottom="false"
        app:srcCompat="@mipmap/thresh_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/User"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/Name"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/apellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/Surname"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/nacionalidad2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/Birth"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/nacionalidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/Nationality"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/juegos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/Games"
            android:textSize="18sp" />

    </LinearLayout>
</LinearLayout>
