<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/negro"
    android:orientation="vertical"
    tools:context="com.dmb.testriotapi.NewPostActivity">

    <ImageView
        android:id="@+id/img_NuevoTema"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:src="@drawable/newpost" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:layout_weight="100"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:ems="12"
                android:hint="@string/Name"
                android:inputType="textEmailSubject"
                android:textColor="@color/negro" />

            <EditText
                android:id="@+id/etMensaje"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="10"
                android:ems="12"
                android:hint="@string/Mensaje"
                android:textAlignment="center"
                android:textColor="@color/negro" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/btnNuevoTema"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:background="@drawable/radius"
        android:text="@string/NuevoTema"
        android:textColor="@color/negro"
        android:textSize="18sp" />
</LinearLayout>
