<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/negro"
    android:orientation="vertical"
    tools:context="com.dmb.testriotapi.ConfigActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/tvSeleccionaIdioma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="16dp"
        android:text="@string/selecciona_idioma"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/tvEspanol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:background="@color/amarillo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSeleccionaIdioma"
        app:srcCompat="@mipmap/icono_espana" />

    <ImageButton
        android:id="@+id/tvCatalan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@color/amarillo"
        app:layout_constraintStart_toEndOf="@+id/tvEspanol"
        app:layout_constraintTop_toTopOf="@+id/tvEspanol"
        app:srcCompat="@mipmap/icono_cataluna" />

    <ImageButton
        android:id="@+id/tvIngles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/amarillo"
        app:layout_constraintStart_toEndOf="@+id/tvCatalan"
        app:layout_constraintTop_toBottomOf="@+id/tvSeleccionaIdioma"
        app:srcCompat="@mipmap/icono_uk" />

    <TextView
        android:id="@+id/tvVisitaWeb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="39dp"
        android:text="@string/visita_nuestra_web"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEspanol" />

    <Button
        android:id="@+id/btWeb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:background="@color/amarillo"
        android:text="www.manguimaproject.com"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvVisitaWeb" />

    <TextView
        android:id="@+id/tvSalirManguima"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="23dp"
        android:text="@string/salir_manguima"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btWeb" />

    <Button
        android:id="@+id/btSalir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:background="@color/amarillo"
        android:drawableLeft="@mipmap/icono_salirr"
        android:text="@string/salir_boton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSalirManguima" /><![CDATA[

    />

]]>
</LinearLayout>
