<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/negro"
    android:orientation="vertical"
    android:paddingBottom="20dp"
    tools:context="com.dmb.testriotapi.Users.PasswordFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:background="@mipmap/password" />

            <TextView
                android:id="@+id/tvPasswordReset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:text="@string/Resetpass"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/prompt_email"
                    android:textColorHint="@color/white">

                    <EditText
                        android:id="@+id/etMailReset"
                        android:layout_width="343dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_weight="1"
                        android:ems="12"
                        android:inputType="textEmailAddress"
                        android:textAlignment="viewStart"
                        android:textColor="@color/white" />
                </android.support.design.widget.TextInputLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="49dp" />

                <Button
                    android:id="@+id/btnSendPasswordReset"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_weight="1"
                    android:background="@color/amarillo"
                    android:text="@string/Sendmail"
                    android:textColor="@color/negro" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>