<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.dmb.testriotapi.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"/>

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etLoginEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etLoginPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Contraseña"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/tvNotRegistered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notRegistered"
                android:textStyle="italic"
                android:textSize="15sp"
                android:clickable="true"/>

            <Button
                android:id="@+id/btnSignIn"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Login"
                android:textStyle="bold" />

            <com.getbase.floatingactionbutton.FloatingActionsMenu
                android:id="@+id/menuLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                fab:fab_addButtonColorNormal="?attr/colorPrimary"
                fab:fab_addButtonSize="normal"
                fab:fab_labelStyle="@style/Tags"
                fab:fab_labelsPosition="left">

                <com.getbase.floatingactionbutton.FloatingActionButton
                    android:id="@+id/loginGoogle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    fab:fab_colorNormal="?attr/colorAccent"
                    fab:fab_icon="@mipmap/google_plus"
                    fab:fab_size="mini"
                    fab:fab_title="Google +" />

                <com.getbase.floatingactionbutton.FloatingActionButton
                    android:id="@+id/loginFacebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    fab:fab_colorNormal="?attr/colorAccent"
                    fab:fab_icon="@mipmap/facebook"
                    fab:fab_size="mini"
                    fab:fab_title="Facebook" />

                <com.getbase.floatingactionbutton.FloatingActionButton
                    android:id="@+id/loginTwitter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    fab:fab_colorNormal="?attr/colorAccent"
                    fab:fab_icon="@mipmap/twitter"
                    fab:fab_size="mini"
                    fab:fab_title="Twitter" />

            </com.getbase.floatingactionbutton.FloatingActionsMenu>

        </LinearLayout>


    </ScrollView>

</LinearLayout>
